fix(link-list): fix spacing

--- a/packages/styles/scss/components/link-list/_link-list.scss
+++ b/packages/styles/scss/components/link-list/_link-list.scss
@@ -85,6 +85,10 @@
   :host(#{$c4d-prefix}-link-list-item-cta) {
     .#{$prefix}--link {
       align-content: flex-start;
+      display: flex;
+      padding: $spacing-04 0;
+      gap: $spacing-03;
+      inline-size: 100%;
 
       span,
       ::slotted(svg[slot='icon']) {
@@ -103,18 +107,6 @@
     }
 
     @include type-style('heading-02');
-  }
-
-  :host(#{$c4d-prefix}-link-list-item)[type='default'],
-  :host(#{$c4d-prefix}-link-list-item-cta)[type='default'],
-  :host(#{$c4d-prefix}-link-list-item)[type='end'],
-  :host(#{$c4d-prefix}-link-list-item-cta)[type='end'] {
-    .#{$prefix}--link {
-      display: flex;
-      padding: $spacing-04 0;
-      gap: $spacing-05;
-      inline-size: 100%;
-    }
   }
 
   .#{$c4d-prefix}--link-list__list {
